added top hero page on welcome.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,2 +1,9 @@
-%h1 Welcome#index
-%p Find me in app/views/welcome/index.html.haml
+.hero
+  .hero-inner
+    .hero-copy
+      %h1 PG admissions Online
+      %p
+        Apply to the M.Tech, M.S and Ph.D program at the Department of
+        Computer Science, IIT Kanpur.
+      %a{ href: 'http://cse.iitk.ac.in/users/admissions/' }
+        %button Learn more
