--- a/app/assets/stylesheets/refills/_hero.scss
+++ b/app/assets/stylesheets/refills/_hero.scss
@@ -7,9 +7,9 @@
 
   $hero-background-top: #7F99BE;
   $hero-background-bottom: #20392B;
-  $hero-color: white;
+  $hero-color: #324766;
   $gradient-angle: 10deg;
-  $hero-image: 'https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png';
+  $hero-image: image-path("rm.jpg");
 
   @include background(url($hero-image), linear-gradient($gradient-angle, $hero-background-bottom, $hero-background-top), no-repeat $hero-background-top scroll);
   background-color: #324766;
