moved refill scafold for navigation and improved it

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,6 @@
 @import "bourbon/bourbon";
 @import "base/base";
 @import "neat/neat";
-@import "refills/navigation";
 @import "refills/hero";
 @import "component/login";
+@import "component/navigation";
